@@ -2,9 +2,13 @@ include README.rst
 include LICENSE
 include CHANGELOG
 include AUTHORS
+
 include docs/Makefile
 recursive-include docs .rst
 recursive-include docs .py
+
 recursive-include sitemetrics/locale *
+recursive-include sitetree/migrations .py
+recursive-include sitetree/south_migrations .py
 recursive-include sitemetrics/templates *
 recursive-include sitemetrics/templatetags *
