@@ -1,0 +1,44 @@
+# -*- coding: utf-8 -*-
+from south.utils import datetime_utils as datetime
+from south.db import db
+from south.v2 import SchemaMigration
+from django.db import models
+
+
+class Migration(SchemaMigration):
+
+    def forwards(self, orm):
+        # Adding model 'Keycode'
+        db.create_table(u'sitemetrics_keycode', (
+            (u'id', self.gf('django.db.models.fields.AutoField')(primary_key=True)),
+            ('site', self.gf('django.db.models.fields.related.ForeignKey')(to=orm['sites.Site'])),
+            ('provider', self.gf('django.db.models.fields.CharField')(max_length=50)),
+            ('keycode', self.gf('django.db.models.fields.CharField')(max_length=80)),
+            ('active', self.gf('django.db.models.fields.BooleanField')(default=True)),
+        ))
+        db.send_create_signal(u'sitemetrics', ['Keycode'])
+
+
+    def backwards(self, orm):
+        # Deleting model 'Keycode'
+        db.delete_table(u'sitemetrics_keycode')
+
+
+    models = {
+        u'sitemetrics.keycode': {
+            'Meta': {'object_name': 'Keycode'},
+            'active': ('django.db.models.fields.BooleanField', [], {'default': 'True'}),
+            u'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'keycode': ('django.db.models.fields.CharField', [], {'max_length': '80'}),
+            'provider': ('django.db.models.fields.CharField', [], {'max_length': '50'}),
+            'site': ('django.db.models.fields.related.ForeignKey', [], {'to': u"orm['sites.Site']"})
+        },
+        u'sites.site': {
+            'Meta': {'ordering': "(u'domain',)", 'object_name': 'Site', 'db_table': "u'django_site'"},
+            'domain': ('django.db.models.fields.CharField', [], {'max_length': '100'}),
+            u'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'name': ('django.db.models.fields.CharField', [], {'max_length': '50'})
+        }
+    }
+
+    complete_apps = ['sitemetrics']
